# HOTBOX_DB_UI

backend/: .env.example  .gitignore  docker-compose.yml  example.py  fake_data.py  pyproject.toml  start-gui.sh
backend/box/: control.py  data_save.py  main.py  power_sensor.py  queue.py  temperature.py
backend/db/: client.py  config.py  functions.py
backend/gui/: callbacks.py  components.py  main.py
