[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Gustavo Lozada <gu.lozada9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
ljm = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
