[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Gustavo Lozada <gu.lozada9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
ljm = "^1.3.0"
pymongo = {extras = ["srv"], version = "^4.2.0"}
python-decouple = "^3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
