[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Gustavo Lozada <gu.lozada9@gmail.com>"]
packages = [{include = "box"}, {include = "db"}, {include = "gui"}]

[tool.poetry.dependencies]
python = "^3.10"
ljm = "^1.3.0"
pymongo = {extras = ["srv"], version = "^4.2.0"}
python-decouple = "^3.6"
nicegui = "^1.2.21"
black = "^23.3.0"
faker = "^18.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
